+ Added nodeExists method to atkModule. At this time only used by
  atkMetaPolicy relation support. [Peter]
+ Added atkMetaTools class which contains methods to singularize or pluralize
  English strings (e.g. dogs => dog, dog => dogs etc.). [Peter]
+ Added AF_ONETOMANY_EMBED, this causes the add to be embedded
  in the current node, instead of displaying it on a seperate screen. [Boy]
* Improvements on atkImportHandler:
  * Some functional decomposition applied.
  * Updated documentation.
  * Improved error handling, import documents are validated before 
    they are added. 
  * Fixed bug that would cause first field never to be properly recognized
    at analysis time. [Boy]
* Currency attribute no longer formats the number as a decimal as 
  the numberattribute from which it extends does this anyway. [Boy]
* Fixed extended searching on OneToOne relations. [Boy]
* Removed a call-time-pass-by-reference from the oci9 driver. [Ivo]
* Made atkListAttribute searchable in embedded OneToMany. [Yury]
* Test fix: atkTextAttribute's unit testcase did not do a proper roundtrip
  check, causing the test to fail on Oracle installs. [Ivo]
* Changed atkLanguage stringid fallback module_node_stringid is now 
  the most important, followed by node_stringid and finally stringid. [Boy]
* Fixed atkUIs title() function as it failed to translate the module name
  properly. [Boy]
* Removed unnecessary brs from edit() of atkOneToMany. [Boy]
* Made atkTextAttribute not display rows or columns property if it doesn't
  have any value. [Boy]
* Current record is now displayed in title of view page. [Alberto]
* Type, table, flags, policy and handler can now be specified by setting
  the instance vars ($type, $table, $flags, $metaPolicy, $metaHandler) on
  the atkMetaNode subclass. [Peter]
* The atkMetaPolicy now knows the difference between time, date and datetime
  fields (required some changes in various atkDB classes). [Peter]