@@ -306,21 +306,24 @@
 					
           foreach ($list["rows"][$i]["actions"] as $name => $url)
           {
-  	        $actionloader.="\nrl_a['".$listName."'][".$i."]['".$name."'] = '".$url."';";
+  	    $actionloader.="\nrl_a['".$listName."'][".$i."]['".$name."'] = '".$url."';";
 						
-						$link = $name;
-						
-						if($icons == true)
-						{
-							$icon = $theme->iconPath($name,"recordlist");
-  						$link = '<img width="16" height="16" border="0" src="'.$icon.'" title="'.text($name,$this->m_node->m_type).'">';
-						}
-						else
-						{
-						  $link = text($name);
-						}
-  	        $str_actions.='<a href="'."javascript:rl_do('".$listName."',$i,'".$name."');".'">'.$link.'</a>&nbsp;';
-  	      }
+	    $link = $name;
+					
+	    if($icons == true)
+	    {
+	      $icon = $theme->iconPath($name,"recordlist");
+  	      $link = '<img width="16" height="16" border="0" src="'.$icon.'" title="'.text($name,$this->m_node->m_type).'">';
+	    }
+	    else
+	    {
+	      $link = text($name);
+	    }
+            $confirmtext= "false";
+            if (atkconfig("recordlist_javascript_delete") && $name=="delete")
+            $confirmtext = "'".$this->m_node->confirmActionText($name)."'";
+            $str_actions.='<a href="'."javascript:rl_do('$listName',$i,'$name',$confirmtext);".'">'.$link.'</a>&nbsp;';
+          }
           $str_actions.="</span>";
           /* actions (left) */
           if ($orientation == "left" || $orientation == "both")
