@@ -30,6 +30,8 @@ Changes in ATK 5.2.2
   English strings (e.g. dogs => dog, dog => dogs etc.). [Peter]
 + Added AF_ONETOMANY_EMBED, this causes the add to be embedded
   in the current node, instead of displaying it on a seperate screen. [Boy]
++ Added $config_recordlist_javascript_delete, setting this to true will
+  make ATK use javascript for the confirmation dialogue when deleting [Boy]
 * Improvements on atkImportHandler:
   * Some functional decomposition applied.
   * Updated documentation.
